--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
+  "prettier": {
+    "trailingComma": "none",
+    "singleQuote": true
+  },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^0.25.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
@@ -41,6 +46,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "json-server": "^0.17.0",
     "prettier": "^2.4.1",
     "sass": "^1.38.0",
     "sass-loader": "^12.0.0",
