--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ts-jest": "^27.0.4",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.5",
+    "vue-next-masonry": "^1.1.3",
     "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
